--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testCompile 'junit:junit:4.12'
+    testCompile ('junit:junit:4.12')
+    testCompile (group: 'org.mockito', name: 'mockito-all', version: '1.10.19')
+
+
 }
