--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include 'kodilla-kacper'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
 include 'com.kodilla.spring.forum'
+include 'kodilla-patterns'
 
