--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'kodilla-spring-intro'
 include 'kodilla-spring'
 include 'com.kodilla.spring.forum'
 include 'kodilla-patterns'
+include 'kodilla-jdbc'
 
